[package]
name = "exports"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[lib]
doctest = false

[features]
testing = [
    "common/testing",
    "database/testing",
    "errors/testing",
    "keybroker/testing",
    "metrics/testing",
    "model/testing",
    "shape_inference/testing",
    "storage/testing",
    "usage_tracking/testing",
    "value/testing",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async_zip = { workspace = true }
bytes = { workspace = true }
common = { workspace = true }
database = { workspace = true }
errors = { workspace = true }
fastrace = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
keybroker = { workspace = true }
maplit = { workspace = true }
metrics = { workspace = true }
mime2ext = { workspace = true }
model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shape_inference = { workspace = true }
storage = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
usage_tracking = { workspace = true }
value = { workspace = true }

[dev-dependencies]
common = { workspace = true, features = ["testing"] }
convex_macro = { workspace = true }
database = { workspace = true, features = ["testing"] }
errors = { workspace = true, features = ["testing"] }
file_storage = { workspace = true }
headers = { workspace = true }
keybroker = { workspace = true, features = ["testing"] }
metrics = { workspace = true, features = ["testing"] }
model = { workspace = true, features = ["testing"] }
pretty_assertions = { workspace = true }
runtime = { workspace = true }
shape_inference = { workspace = true, features = ["testing"] }
storage = { workspace = true, features = ["testing"] }
storage_zip_reader = { workspace = true }
usage_tracking = { workspace = true, features = ["testing"] }
value = { workspace = true, features = ["testing"] }

[lints]
workspace = true
