[package]
name = "file_storage"
version = "0.1.0"
authors = ["Convex, Inc. <no-reply@convex.dev>"]
edition = "2021"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
common = { workspace = true }
database = { workspace = true }
errors = { workspace = true }
futures = { workspace = true }
futures-async-stream = { workspace = true }
headers = { workspace = true }
keybroker = { workspace = true }
maplit = { workspace = true }
metrics = { workspace = true }
model = { workspace = true }
storage = { workspace = true }
tracing = { workspace = true }
usage_tracking = { workspace = true }
value = { workspace = true }

[dev-dependencies]
common = { workspace = true, features = ["testing"] }
convex_macro = { workspace = true }
database = { workspace = true, features = ["testing"] }
errors = { workspace = true, features = ["testing"] }
events = { workspace = true, features = ["testing"] }
keybroker = { workspace = true, features = ["testing"] }
metrics = { workspace = true, features = ["testing"] }
model = { workspace = true, features = ["testing"] }
runtime = { workspace = true, features = ["testing"] }
storage = { workspace = true, features = ["testing"] }
usage_tracking = { workspace = true, features = ["testing"] }
value = { workspace = true, features = ["testing"] }

[lints]
workspace = true
