[package]
name = "convex_fivetran_common"
description = "Common files for the Fivetran source and destination connectors for Convex (convex.dev)"
version = "0.0.1"
authors = ["Convex, Inc. <no-reply@convex.dev>"]
edition = "2021"
resolver = "2"
license = "Apache-2.0"
repository = "https://github.com/get-convex/convex-fivetran-source"
homepage = "https://www.convex.dev/"

[lib]
name = "convex_fivetran_common"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-compression = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls-vendored"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["gzip"] }
url = { workspace = true }

[build-dependencies]
bytes = { workspace = true }
cfg-if = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["native-tls-vendored"] }
tokio = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
    # Build dependencies not understood
    "cfg_if",
    "tonic_build",
    # Prost required via tonic macro
    "prost",
]

[features]
testing = ["proptest", "proptest-derive"]
