[package]
name = "convex_fivetran_common"
description = "Common files for the Fivetran source and destination connectors for Convex (convex.dev)"
version = "0.0.1"
authors = ["Convex, Inc. <no-reply@convex.dev>"]
edition = "2021"
resolver = "2"
license = "Apache-2.0"
repository = "https://github.com/get-convex/convex-fivetran-source"
homepage = "https://www.convex.dev/"

[lib]
name = "convex_fivetran_common"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
proptest = { workspace = true, optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
url = { workspace = true }

[build-dependencies]
cfg-if = { workspace = true }
fxhash = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
proptest = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
    # Build dependencies not understood
    "cfg_if",
    "tonic_build",
    # Prost required via tonic macro
    "prost",
]

[features]
testing = ["proptest"]

[lints]
workspace = true
