[package]
name = "convex_fivetran_destination"
description = "Fivetran destination for Convex (convex.dev)"
version = "0.0.1"
authors = ["Convex, Inc. <no-reply@convex.dev>"]
edition = "2021"
resolver = "2"
license = "Apache-2.0"
repository = "https://github.com/get-convex/convex-fivetran-source"
homepage = "https://www.convex.dev/"

[package.metadata.cargo-machete]
ignored = [
    # Build dependencies not understood
    "cfg_if",
    "tonic_build",
    # Prost required via tonic macro
    "prost",
]

[lib]
name = "convex_fivetran_destination"
path = "src/lib.rs"

[dependencies]
aes = { workspace = true }
anyhow = { workspace = true }
async-compression = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
cbc = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
common = { workspace = true }
convex_fivetran_common = { workspace = true }
csv-async = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
futures-async-stream = { workspace = true }
maplit = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
cmd_util = { workspace = true }
common = { workspace = true, features = ["testing"] }
convex_fivetran_common = { workspace = true, features = ["testing"] }
must-let = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }

[lints]
workspace = true
