[package]
name = "convex_fivetran_source"
description = "Fivetran source connector for Convex (convex.dev)"
version = "0.0.1"
authors = ["Convex, Inc. <no-reply@convex.dev>"]
edition = "2021"
resolver = "2"
license = "Apache-2.0"
repository = "https://github.com/get-convex/convex-fivetran-source"
homepage = "https://www.convex.dev/"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
convex = { path = "../convex", features = ["native-tls-vendored"] }
convex_fivetran_common = { path = "../fivetran_common" }
derive_more = { workspace = true }
futures = { workspace = true }
futures-async-stream = { workspace = true }
maplit = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls-vendored"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["gzip"] }

[build-dependencies]
bytes = { workspace = true }
cfg-if = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["native-tls-vendored"] }
tokio = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
convex = { path = "../convex", features = ["testing"] }
convex_fivetran_common = { path = "../fivetran_common", features = ["testing"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }
schemars = { version = "0.8" }
uuid = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
    # Build dependencies not understood
    "bytes",
    "cfg_if",
    "futures_util",
    "tonic_build",
    # Prost required via tonic macro
    "prost",
]
