[package]
name = "fivetran_source"
description = "Fivetran source connector for Convex (convex.dev)"
version = "2.0.1"
authors = ["Convex, Inc. <no-reply@convex.dev>"]
edition = "2024"
resolver = "2"
license = "Apache-2.0"
repository = "https://github.com/get-convex/convex-fivetran-source"
homepage = "https://www.convex.dev/"

[package.metadata.cargo-machete]
ignored = [
    # Build dependencies not understood
    "bytes",
    "cfg_if",
    "futures_util",
    "tonic_build",
    # Prost required via tonic macro
    "prost",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
convex = { workspace = true }
derive_more = { workspace = true }
fivetran_common = { workspace = true }
futures = { workspace = true }
futures-async-stream = { workspace = true }
headers = { workspace = true }
maplit = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
bytes = { workspace = true }
cfg-if = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
cmd_util = { workspace = true }
convex = { workspace = true, features = ["testing"] }
fivetran_common = { workspace = true, features = ["testing"] }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
