[package]
name = "function_runner"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[package.metadata.cargo-udeps.ignore]
normal = ["mysql"]
development = ["mysql"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async_lru = { path = "../async_lru" }
common = { path = "../common" }
convex_macro = { path = "../convex_macro" }
database = { path = "../database" }
errors = { path = "../errors" }
fastrace = { workspace = true }
file_storage = { path = "../file_storage" }
futures = { workspace = true }
imbl = { workspace = true }
indexing = { path = "../indexing" }
isolate = { path = "../isolate" }
keybroker = { path = "../keybroker" }
metrics = { path = "../metrics" }
model = { path = "../model" }
moka = { workspace = true }
parking_lot = { workspace = true }
prometheus = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
runtime = { path = "../runtime" }
storage = { path = "../storage" }
sync_types = { package = "convex_sync_types", path = "../convex/sync_types" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
udf = { path = "../udf" }
usage_tracking = { path = "../usage_tracking" }
value = { path = "../value" }

[dev-dependencies]

common = { path = "../common", features = ["testing"] }
database = { path = "../database", features = ["testing"] }
errors = { path = "../errors", features = ["testing"] }
indexing = { path = "../indexing", features = ["testing"] }
isolate = { path = "../isolate", features = ["testing"] }
keybroker = { path = "../keybroker", features = ["testing"] }
metrics = { path = "../metrics", features = ["testing"] }
model = { path = "../model", features = ["testing"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
runtime = { path = "../runtime", features = ["testing"] }
storage = { path = "../storage", features = ["testing"] }
udf = { path = "../udf", features = ["testing"] }
usage_tracking = { path = "../usage_tracking", features = ["testing"] }
value = { path = "../value", features = ["testing"] }

[features]
testing = [
    "common/testing",
    "database/testing",
    "errors/testing",
    "indexing/testing",
    "isolate/testing",
    "keybroker/testing",
    "metrics/testing",
    "model/testing",
    "proptest",
    "proptest-derive",
    "runtime/testing",
    "storage/testing",
    "udf/testing",
    "usage_tracking/testing",
    "value/testing",
]
tracy-tracing = ["common/tracy-tracing"]

[lints]
workspace = true
