[package]
name = "http_client"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[lib]
doctest = false

[features]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
http-cache = { workspace = true }
http-cache-reqwest = { workspace = true }
metrics = { path = "../metrics" }
openidconnect = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
metrics = { path = "../metrics", features = ["testing"] }
tokio = { workspace = true }

[lints]
workspace = true
